--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
+:root {
+  --primary-white: #ffffff;
+  --primary-two: #15b3a8;
+}
+
+body {
+  font-family: "Lato sans serif";
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +46,38 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/******************NAVBAR**********************/
+.title{
+  color: var(--primary-white) !important;
+  
+}
+
+/******************menu links**********************/
+
+nav a.nav-link {
+  font-weight: 500;
+  letter-spacing: 0.0375rem;
+  cursor: pointer;
+}
+
+nav ul li {
+  text-transform: uppercase;
+}
+
+.navbar-nav > li > a {
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+  color: var(--primary-white) !important;
+}
+
+.navbar-nav > li > a.active, .navbar-nav >li > a:focus {
+  border: 0.15rem solid var(--primary-two);
+  color: var(--primary-two) !important;
+}
+
+.navbar-nav > li > a:hover {
+  border: 0.15rem solid var(--primary-two);
+  color: var(--primary-two) !important;
 }
