--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
 
 :root {
   --primary-white: #ffffff;
-  --primary-two: #15b3a8;
+  --primary-cyan: #15b3a8;
+  --primary-black: #000000;
+  --primary-dark: rgba(255,255,255,0)
 }
 
 body {
@@ -70,14 +72,66 @@ nav ul li {
   margin-right: 0.75rem;
   margin-left: 0.75rem;
   color: var(--primary-white) !important;
+  border: 0.15rem solid var(--primary-dark)
 }
 
 .navbar-nav > li > a.active, .navbar-nav >li > a:focus {
-  border: 0.15rem solid var(--primary-two);
-  color: var(--primary-two) !important;
+  border: 0.15rem solid var(--primary-cyan);
+  color: var(--primary-cyan) !important;
 }
 
 .navbar-nav > li > a:hover {
-  border: 0.15rem solid var(--primary-two);
-  color: var(--primary-two) !important;
+  border: 0.15rem solid var(--primary-cyan);
+  color: var(--primary-cyan) !important;
+}
+
+/******************Header**********************/
+
+.header-wrapper {
+  position: relative;
+  background: url(washingtonbackground.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.main-info h1 {
+  color: var(--primary-black);
+  text-transform: uppercase;
+  
+}
+
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary-black);
+}
+
+.btn-main {
+  color: var(--primary-black);
+  border: 3px solid var(--primary-cyan);
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
+  margin: 2rem;
+  text-decoration: none;
+  font-weight: 500;
+}
+.btn-main:hover {
+  text-decoration: none;
+  background-color: var(--primary-cyan);
+  transition: .2s;
+  color: var(--primary-white);
 }
