--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@ nav ul li {
 
 .header-wrapper {
   position: relative;
-  background: url(washingtonbackground.jpg) no-repeat;
+  background: url(./images/washingtonbackground.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   height: 90vh;
@@ -141,4 +141,64 @@ nav ul li {
   padding-right: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
+}
+
+.about-main {
+  position: relative;
+  background: url(./images/washingtonbackground.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.about-main-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.about-img {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  top: 225;
+}
+
+.about-main-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 200px;
+  left: 0;
+  right: 0;
+}
+
+.about-text {
+  font-size: 30px;
+  font-weight: 600;
+  color: var(--primary-black);
+  background-color: rgba(255, 255, 255, 0.6);
+}
+.about-main-info-two {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 300px;
+  left: 0;
+  right: 0;
 }
