--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ nav ul li {
   background: url(./images/washingtonbackground.jpg) no-repeat;
   background-size: cover;
   background-position: center;
-  height: 90vh;
+  height: 105vh;
 }
 
 .main-info {
@@ -134,6 +134,10 @@ nav ul li {
   background-color: var(--primary-cyan);
   transition: .2s;
   color: var(--primary-white);
+}
+
+.footer-main {
+  
 }
 
 .icon {
