--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,7 @@ nav ul li {
   transition: .2s;
   color: var(--primary-white);
 }
+/*******************Footer*****************/
 
 .footer-main {
   
@@ -146,6 +147,7 @@ nav ul li {
   padding-top: 5px;
   padding-bottom: 5px;
 }
+/****************About******************/
 
 .about-main {
   position: relative;
@@ -205,4 +207,43 @@ nav ul li {
   top: 300px;
   left: 0;
   right: 0;
+}
+
+/**********************MyWork**********************/
+
+.mywork-main {
+  position: relative;
+  background: url(./images/washingtonbackground.jpg) repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+
+.mywork-main-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.project-img {
+  width: auto;
+  height: 60vh;
+  margin: auto;
+}
+
+.card-body {
+  width: auto;
+  height: auto;
+}
+
+.btn {
+  display: flex;
+  flex-direction: row;
 }
